# Axum-Svelte-Demo-App

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  compose.yml  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  svelte.config.js  typeshare.toml
.claude/: add-endpoint.md
dex/: config.yaml
migrations/: 0001_create_sessions.sql  0002_create_api_keys.sql  0003_rbac.sql  0004_role_check.sql
scripts/: db-start.ps1  db-stop.ps1
server/: Cargo.toml  build.rs
server/src/: main.rs
src/: auth.rs  config.rs  error.rs  health.rs  lib.rs  main.rs
src/auth/: api_keys.rs  db.rs  mod.rs  oidc.rs  sessions.rs  users.rs
src/lib/api/: client.ts  generated.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte  fallback.rs  middleware.rs
src/routes/admin/: +page.svelte  intercept.rs
src/routes/api/: fallback.rs  intercept.rs  middleware.rs  openapi.toml
src/routes/api/admin/: intercept.rs  middleware.rs
src/routes/api/admin/api_keys/: route.rs
src/routes/api/admin/api_keys/[id]/: route.rs
src/routes/api/docs/: openapi.toml  route.rs
src/routes/api/docs/openapi.json/: route.rs
src/routes/api/hello/: route.rs
src/routes/api/me/: route.rs
src/routes/auth/: middleware.rs
src/routes/auth/callback/: route.rs
src/routes/auth/login/: route.rs
src/routes/auth/logout/: route.rs
src/routes/forbidden/: +page.svelte
src/routes/health/: route.rs
src/routes/hello/: +page.svelte
src/routes/ready/: route.rs
