[workspace]
resolver = "3"

[package]
name = "svelte-rust-test"
version = "0.1.0"
edition = "2024"

[features]
tokio-console = ["dep:console-subscriber"]

[dependencies]
axum = "0.8"
axum-folder-router = { path = "../axum-folder-router" }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header", "timeout", "limit", "compression-full", "request-id"] }
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dotenvy = "0.15"
envy = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "migrate"] }
openidconnect = { version = "3", features = ["reqwest"] }
axum-extra = { version = "0.12", features = ["cookie-private"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-human-readable"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
typeshare = "1"

[build-dependencies]
svelte-rust = { path = "../svelte-rust" }
