[workspace]
resolver = "3"
members = ["server"]
# A bare `cargo build`/`test` in the root would otherwise build only this
# (root) package. Listing `server` here makes the no-args command reach its
# build.rs (which runs the frontend pipeline); `.` keeps the library's
# `openapi_golden` test in the default `cargo test` set.
default-members = [".", "server"]

[package]
name = "svelte-rust-test"
version = "0.1.0"
edition = "2024"

# The route tree + OpenAPI builder live in this library so that `server`'s
# build.rs can link it as a build-dependency and regenerate `openapi.json`
# before the frontend build (see server/build.rs). The runtime binary is
# `server`.
[lib]
name = "svelte_rust_test"
path = "src/lib.rs"

[features]
tokio-console = ["dep:console-subscriber"]

[dependencies]
axum = "0.8"
axum-folder-router = { path = "../axum-folder-router", features = ["openapi"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header", "timeout", "limit", "compression-full", "request-id", "normalize-path"] }
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
console-subscriber = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dotenvy = "0.15"
envy = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time", "migrate"] }
openidconnect = { version = "3", features = ["reqwest"] }
axum-extra = { version = "0.12", features = ["cookie-private", "typed-header"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-human-readable"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
utoipa = { version = "5", features = ["uuid", "time"] }
